this is updated

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul class="navbar">
             <li><a href="#" class="active">Home</a></li>
             <li><a href="#two">Mod_ESP</a></li>
-            <li><a href="#coming">Contact Us</a></li>
+            <li><a href="#mypage">Contact Us</a></li>
         </ul>
         <!-- menu close  -->
 
@@ -73,3 +73,11 @@
         </div>
     </div>
      <!-- MOD ESP CLOSE -->
+
+     <!-- info open -->
+     <div class="info2" id="mypage">
+       <h2>EXPENTABLE TEAM</h2> 
+       <ul>
+        <li></li>
+       </ul>
+     </div>
